[package]
name = "cwdemangle"
version = "1.0.0"
edition = "2021"
authors = ["Luke Street <luke@street.dev>"]
license = "CC0-1.0"
repository = "https://github.com/encounter/cwdemangle"
readme = "../README.md"
description = "CodeWarrior C++ symbol demangler"
categories = ["parser-implementations", "no-std"]
rust-version = "1.58"

[dependencies]
# Intentionally left blank.
